# cpp_starter_template

./: CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
